# sliverc2_mcp

./: LICENSE  README.md  pyproject.toml  sliverc2_mcp.py
