[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "sliverc2_mcp"
version = "1.0.0"
description = "An MCP Sliver C2 server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sliver-py>=0.0.19",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
sliverc2_mcp = "sliverc2_mcp:main"

